--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dynamic Favicons</title>
+    <link id="favicon" rel="icon" href="favicons/0.png" type="image/png" sizes="16*16">
 </head>
 <body>
     
