add some page content and styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link id="favicon" rel="icon" href="favicons/0.png" type="image/png" sizes="16*16">
 </head>
 <body>
-    
+    <h1 style="text-align: center; color: crimson;">Welcome to Cloudinary</h1>
+    <p style="text-align: center; margin: auto; width: 60%;">Transform images and videos to load faster with no visual degradation, automatically generate image and video variants, and deliver high quality responsive experiences to increase conversions.</p>
 </body>
 </html>
