--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1 style="text-align: center; color: crimson;">Welcome to Cloudinary</h1>
     <p style="text-align: center; margin: auto; width: 60%;">Transform images and videos to load faster with no visual degradation, automatically generate image and video variants, and deliver high quality responsive experiences to increase conversions.</p>
+    <script src="index.js"></script>
 </body>
 </html>
