--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 style="text-align: center; color: crimson;">Welcome to Cloudinary</h1>
+    <img src="https://res.cloudinary.com/bowenivan/image/upload/v1653459354/cloudinary_hpydz4.png" alt="logo" style="display: block; margin: auto;" />
     <p style="text-align: center; margin: auto; width: 60%;">Transform images and videos to load faster with no visual degradation, automatically generate image and video variants, and deliver high quality responsive experiences to increase conversions.</p>
     <script src="script.js"></script>
 </body>
